unpackaged/main/default/objects/IntegrationApp__mdt/IntegrationApp__mdt.object-meta.xml
<CustomObject>
    <label>Integration App</label>
    <pluralLabel>Integration Apps</pluralLabel>
</CustomObject>