unpackaged/main/default/objects/IntegrationApp__mdt/fields/Authorization__c.field-meta.xml
<CustomField>
    <fullName>Authorization__c</fullName>
    <label>Authorization</label>
    <length>20</length>
    <type>Text</type>
</CustomField>