unpackaged/main/default/objects/IntegrationApp__mdt/fields/AuthorizationURL__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationURL__c</fullName>
    <description>Authorization URL.</description>
    <inlineHelpText>Authorization URL.</inlineHelpText>
    <label>Authorization URL</label>
    <type>Url</type>
</CustomField>