unpackaged/main/default/objects/IntegrationApp__mdt/fields/BodyType__c.field-meta.xml
<CustomField>
    <fullName>BodyType__c</fullName>
    <description>Body type of the data.</description>
    <inlineHelpText>Body type of the data.</inlineHelpText>
    <label>Body Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>