unpackaged/main/default/objects/IntegrationApp__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Client Id of GitHub.</description>
    <inlineHelpText>Client Id of GitHub.</inlineHelpText>
    <label>Client Id</label>
    <length>21</length>
    <type>Text</type>
</CustomField>