unpackaged/main/default/objects/IntegrationApp__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <description>Client Secret.</description>
    <inlineHelpText>Client Secret.</inlineHelpText>
    <label>Client Secret</label>
    <length>40</length>
    <type>Text</type>
</CustomField>