unpackaged/main/default/objects/IntegrationApp__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Url of endpoint.</description>
    <inlineHelpText>Url of endpoint.</inlineHelpText>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>