unpackaged/main/default/objects/IntegrationApp__mdt/fields/EndpointLogin__c.field-meta.xml
<CustomField>
    <fullName>EndpointLogin__c</fullName>
    <label>Endpoint Login</label>
    <type>Url</type>
</CustomField>