unpackaged/main/default/objects/IntegrationApp__mdt/fields/RedirectURI__c.field-meta.xml
<CustomField>
    <fullName>RedirectURI__c</fullName>
    <description>Redirect URI after authentication</description>
    <inlineHelpText>Redirect URI after authentication</inlineHelpText>
    <label>Redirect URI</label>
    <type>Url</type>
</CustomField>