unpackaged/main/default/objects/IntegrationApp__mdt/fields/RepositoryName__c.field-meta.xml
<CustomField>
    <fullName>RepositoryName__c</fullName>
    <description>Repository Name.</description>
    <inlineHelpText>Repository Name.</inlineHelpText>
    <label>Repository Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>