unpackaged/main/default/objects/IntegrationApp__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Scope of integration.</description>
    <inlineHelpText>Scope of integration.</inlineHelpText>
    <label>Scope</label>
    <length>4</length>
    <type>Text</type>
</CustomField>