unpackaged/main/default/objects/IntegrationApp__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Security word.</description>
    <inlineHelpText>Security word.</inlineHelpText>
    <label>State</label>
    <length>5</length>
    <type>Text</type>
</CustomField>