unpackaged/main/default/objects/IntegrationApp__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>User Name.</description>
    <inlineHelpText>User Name.</inlineHelpText>
    <label>User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>