unpackaged/main/default/objects/IntegrationApp__mdt/fields/VersionController__c.field-meta.xml
<CustomField>
    <fullName>VersionController__c</fullName>
    <description>Version Controller Name</description>
    <label>VersionController</label>
    <length>50</length>
    <type>Text</type>
</CustomField>